# nanohorizon

./: .craftax_todo.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .smr_attribution.json  README.md  VERIFIER_RUBRIC.md  craftax_todo.md  eval_report.md  experiment_log.txt  findings.txt  pivotrl_failed.txt  pyproject.toml  task.toml  task_contract.json
.fake_eval/: eval_summary.json
.nh_eval_final/: result.json
.nh_fakebin/: vllm
.repo_cache/: manifest.json
artifacts/: verifier_feedback.txt
configs/: classic_craftax_1m_random_init.yaml  craftax_cpt_data_qwen35_27b_100k.yaml  craftax_cpt_data_qwen35_27b_100k_fast.yaml  craftax_cpt_qwen35_0p8b_100k.yaml  craftax_fbc_fixed_baseline_replay_clean_trl_sft_steps16.yaml  craftax_fbc_high_volume_abs2_trl_sft.yaml  craftax_fbc_legacy_shape_real_probe.yaml  craftax_fbc_qwen35_4b_1xa100_20min.yaml  craftax_fbc_qwen35_4b_1xa100_20min_eval.yaml  craftax_fbc_qwen35_4b_1xa100_20min_eval_120rollouts.yaml  craftax_fbc_qwen35_4b_smoke.yaml  craftax_offline_qwen35_4b_1xa100_20min.yaml  craftax_offline_qwen35_4b_student_qwen35_9b_debug.yaml  craftax_offline_qwen35_4b_student_qwen35_9b_external_eval.yaml  craftax_offline_qwen35_4b_student_qwen35_9b_proof.yaml  craftax_offline_reference.yaml  craftax_prompt_opt_gemini25_flash_lite_local_eval20.yaml  craftax_prompt_opt_qwen35_4b_codex_auto_push_e2e.yaml  craftax_prompt_opt_qwen35_4b_codex_bootstrap_verify.yaml  craftax_prompt_opt_qwen35_4b_codex_compact_follow_first.yaml  craftax_prompt_opt_qwen35_4b_codex_daytona_e2e_run_3.yaml  craftax_prompt_opt_qwen35_4b_codex_daytona_stack_validation.yaml  craftax_prompt_opt_qwen35_4b_codex_decision_brief.yaml  craftax_prompt_opt_qwen35_4b_codex_dispatch_fix_e2e.yaml  craftax_prompt_opt_qwen35_4b_codex_durable_intent_fix.yaml  craftax_prompt_opt_qwen35_4b_codex_load_b.yaml  craftax_prompt_opt_qwen35_4b_codex_local_runtime_final_smoke_2.yaml  craftax_prompt_opt_qwen35_4b_codex_pipeline_fix_e2e.yaml  craftax_prompt_opt_qwen35_4b_codex_single_step_progress.yaml  craftax_prompt_opt_qwen35_4b_codex_smoke_test_apr9_c.yaml  craftax_prompt_opt_qwen35_4b_codex_todo_refresh_gate.yaml  craftax_prompt_opt_qwen35_4b_full_auto_e2e.yaml  craftax_prompt_opt_qwen35_4b_gepa_eval20.yaml  craftax_prompt_opt_qwen35_4b_gepa_smoke.yaml  craftax_prompt_opt_qwen35_4b_gpt54_budget.yaml  craftax_prompt_opt_qwen35_4b_local_runtime_final_smoke_1.yaml  craftax_prompt_opt_qwen35_4b_smoke_test_apr9_d.yaml  craftax_prompt_opt_qwen35_4b_smoke_test_b.yaml  craftax_prompt_opt_qwen35_4b_spark_v4_e2e.yaml  craftax_reflexion_nano.yaml  (+36 more)
containers/crafter_rs/: Cargo.toml  README.md
containers/crafter_rs/src/: main.rs
dev/: README.md  install-hooks.sh  lora_probe_train_prompts.jsonl
docker/: base.Dockerfile  craftax_go_explore.Dockerfile  eval.Dockerfile  nle.Dockerfile  offline.Dockerfile  open_research_craftax.local.Dockerfile  rlvr.Dockerfile
docs/: repo-structure.md  smr_guide.md  task-craftax-classic.md  task-craftax.md  task-crafter.md  task-nle.md  tracks.md
nanohorizon/: __init__.py
records/: README.md
reference/: runpod_training_launcher.py
reports/: bootstrap_verify_proxy_eval.json  bootstrap_verify_proxy_eval.md  eval_report.md  final_report.md  publication_smoke_eval.md
scripts/: build_track_image.sh  compare_craftax_prompt_opt_candidates_proxy.py  compare_craftax_prompt_opt_local.py  convert_rollout_mp4_to_gif.sh  craftax_todo.py  deploy_craftax_offline_modal_app.sh  deploy_crafter_offline_modal_app.sh  launch_runpod_craftax_model_eval.sh  launch_runpod_craftax_offline_qwen35_4b_1xa100_20min.sh  launch_runpod_crafter_model_eval.sh  (+48 more)
(+564 files in other folders)
