[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nanohorizon"
version = "0.1.0"
description = "NanoHorizon Craftax video-validation scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nanohorizon"]

[tool.uv]
default-groups = []

