[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nanohorizon"
version = "0.1.0"
description = "Craftax ML engineering golf scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "gepa>=0.1.1",
  "httpx>=0.28.1",
  "numpy>=2.0.0",
  "pillow>=11.3.0",
  "pyyaml>=6.0.2",
  "uvicorn>=0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nanohorizon"]

[dependency-groups]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.4.2",
  "ruff>=0.9.0",
  "ty>=0.0.20",
]
modal = [
  "modal>=1.0.0",
]
classic = [
  "chex>=0.1.90",
  "craftax",
  "distrax>=0.1.5",
  "flax>=0.10.0",
  "gymnax>=0.0.8",
  "imageio>=2.37.0",
  "jax>=0.5.0",
  "optax>=0.2.4",
  "orbax-checkpoint==0.5.0",
]
nle = [
  "gymnasium>=1.0.0",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "nle>=1.1.0",
  "numpy>=2.0.0",
  "pillow>=11.3.0",
]
cloud = [
  "synth-ai @ file:///Users/joshpurtell/Documents/GitHub/synth-ai",
]
training = [
  "accelerate>=1.10.0",
  "datasets>=4.1.0",
  "peft>=0.15.0",
  "torch>=2.6.0",
  "transformers @ git+https://github.com/huggingface/transformers.git@main",
  "trl>=0.28.0",
  "vllm>=0.10.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = [
  "artifacts",
  ".out",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line length (formatter wraps where it can)
]

[tool.ruff.lint.isort]
known-first-party = ["nanohorizon"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
root = ["./src"]
python-version = "3.11"

[tool.ty.src]
include = ["src"]

[tool.ty.analysis]
# Training stack is optional (see `training` dependency group); default dev venv omits these.
replace-imports-with-any = [
  "torch.**",
  "transformers.**",
  "trl.**",
  "peft.**",
  "accelerate.**",
  "datasets.**",
  "vllm.**",
]
