[package]
name = "crafter-rs-container"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crafter-core = { path = "../../../crafter-rs", package = "crafter-core", features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.8", features = ["v4"] }
